results/SpecGenBench/2-shot/log-TwoSum-2023_11_28_03_30_39.txt
class TwoSum {
    //@ requires nums != null;
    //@ ensures \result != null;
    //@ ensures (\forall int i; 0 <= i && i < \result.length; 0 <= \result[i] && \result[i] < nums.length);
    //@ ensures (\exists int i; int j; 0 <= i && i < j && j < nums.length; nums[\result[0]] + nums[\result[1]] == target);
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        //@ maintaining (\forall int i; 0 <= i && i < n; \forall int j; i + 1 <= j && j < n; nums[i] + nums[j] != target);
        //@ maintaining (\forall int i; 0 <= i && i < n; \forall int j; 0 <= j && j < i; nums[i] + nums[j] != target);
        //@ decreases n - i;
        for (int i = 0; i < n; ++i) {
            //@ maintaining (\forall int j; i + 1 <= j && j < n; nums[i] + nums[j] != target);
            //@ maintaining (\forall int j; 0 <= j && j < i; nums[i] + nums[j] != target);
            //@ decreases n - j;
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
            }
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:5: error: '.class' expected
    //@ ensures (\exists int i; int j; 0 <= i && i < j && j < nums.length; nums[\result[0]] + nums[\result[1]] == target);
                                    ^
/home/max/Documents/JMLGPT/tmp/TwoSum.java:5: error: ')' expected
    //@ ensures (\exists int i; int j; 0 <= i && i < j && j < nums.length; nums[\result[0]] + nums[\result[1]] == target);
                                                                                                                         ^
2 errors

